# uptrade_tz

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
config/: settings.py  settings_dev.py  settings_dev.py.example  settings_prod.py.example
menu/: admin.py  models.py  urls.py  views.py
menu/management/commands/: create_demo_menu.py
menu/migrations/: 0001_initial.py
menu/templates/menu/: demo.html  menu.html  menu_item.html
menu/templatetags/: menu_tags.py
