[project]
name = "uptrade-tz"
version = "0.1.0"
description = "Django project for Uptrade"
requires-python = ">=3.8"
dependencies = [
    "Django==5.0",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar==4.2.0",
    "django-extensions==3.2.3",
    "flake8==6.1.0",
    "black==23.9.1",
    "isort==5.12.0",
    "pytest==7.4.2",
    "pytest-django==4.5.2",
    "coverage==7.3.2",
    "Sphinx==7.2.6",
]
prod = [
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.7",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"] 